# gilcu2.github.io

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: index.md  projects.md  skills.md
projects/: index.html
scripts/: deploy.sh
search/: search_index.json
site/: 404.html
site/projects/: index.html
site/search/: search_index.json
site/skills/: index.html
skills/: index.html
