[tool.poetry]
name = "gilcu2-github-io"
version = "0.1.0"
description = ""
authors = ["Reynaldo Gil <gilcu2@gmail.com>"]
readme = "README.md"
packages = [{include = "gilcu2"}]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.42"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
